--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   lottie: ^2.0.0
+  firebase_auth: ^4.1.4
+  cloud_firestore: ^4.1.0
+  firebase_core: ^2.3.0
+  firebase_database: ^10.0.6
+  shared_preferences: ^2.0.15
 
 
 dev_dependencies:
