--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   firebase_core: ^2.3.0
   firebase_database: ^10.0.6
   shared_preferences: ^2.0.15
+  flutter_advanced_drawer: ^1.3.2
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.6
 
 
 dev_dependencies:
