--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   custom_check_box: ^0.0.4
   advanced_search: ^2.2.3
   get: ^4.6.5
-
+  flutter_progress_hud: ^2.0.2
+  wave_linear_progress_indicator: ^0.1.0
 
 dev_dependencies:
   flutter_test:
