--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,9 +49,9 @@ dependencies:
   custom_check_box: ^0.0.4
   advanced_search: ^2.2.3
   get: ^4.6.5
-  flutter_progress_hud: ^2.0.2
   simple_progress_indicators: ^0.2.0
-  adaptive_dialog: ^1.8.0+1
+  flutter_local_notifications: ^12.0.4
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
