--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   simple_progress_indicators: ^0.2.0
   flutter_local_notifications: ^12.0.4
   rxdart: ^0.27.7
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
